[package]
name = "crabrave"
version = "1.0.0"
edition = "2024"
description = "A Tumblr API client for Rust."
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/ryf/crabrave"
authors = ["Ryan Faulhaber"]
keywords = ["tumblr", "api", "client", "social-media"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = [
    "/.github/",
    "/.envrc",
    "/.gitignore",
    "/CLAUDE.md",
    "/clippy.toml",
    "/flake.lock",
    "/flake.nix",
    "/rust-toolchain.toml"
]

[features]
cookies = ["reqwest/cookies"]

[dependencies]
camino = "1.2"
fs-err = "3.2"
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "charset", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
proptest = "1.9"

[lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
disallowed_types = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[package.metadata.release]
allow-branch = ["main"]
sign-commit = true
sign-tag = true
push-remote = "origin"
tag-prefix = "v"
tag-name = "{{prefix}}{{version}}"
publish = true
