[package]
name = "crabrave"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
hmac = "0.12"
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "charset", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dirs = "5.0"
