[package]
name = "oauth-helper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oauth-util"
path = "main.rs"

[dependencies]
crabrave = { path = "../crabrave" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dirs = "5.0"
open = "5.0"
